giving it more memory to avoid OOM on heap size on cloudbees
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@20886 bf0df8d0-2c1f-0410-b170-bd30377b63dc